# digest

./: .gitignore  README.md  config.example.yaml  pyproject.toml
.claude/memory/: MEMORY.md  feedback_tooling.md
src/newsdigest/: __init__.py  cli.py  config.py  models.py  storage.py
src/newsdigest/feeds/: __init__.py  base.py  rss.py  scraper.py
src/newsdigest/output/: __init__.py  email.py  markdown.py  terminal.py
src/newsdigest/ranking/: __init__.py  base.py  claude_provider.py  mlx_provider.py  prompts.py
tests/: test_feeds.py  test_output.py  test_storage.py
tests/fixtures/: sample_feed.xml
